--- a/SysLvLUp/Alarm/css/status.css
+++ b/SysLvLUp/Alarm/css/status.css
@@ -348,3 +348,38 @@
         padding-right: 13px;
        
       }
+button {
+        background-color: #1a2a3b; /* Dark background matching the theme */
+        color: white; /* White text color */
+        border: none; /* No border */
+        padding: 10px 15px; /* Consistent padding */
+        border-radius: 5px; /* Rounded corners */
+        cursor: pointer; /* Pointer cursor on hover */
+        font-size: 1.05em; /* Adjust size to match other icons */
+        text-shadow: 0px 0px 6px #f0f8ff; /* Text shadow for glowing effect */
+        vertical-align: middle; /* Align it with text */
+        margin-left: auto; /* Align to the right */
+    }
+       
+    
+    
+    button:hover {
+        background-color: #3c5060;
+    }
+
+    #export-button {
+        background:  #0d223a;; /* Dark background matching the theme */
+        color: white; /* White text color */
+        border: none; /* No border */
+        padding: 3px 17px; /* Consistent padding */
+        border-radius: 5px; /* Rounded corners */
+        cursor: pointer; /* Pointer cursor on hover */
+        font-size: 1.05em; /* Adjust size to match other icons */
+        text-shadow: 0px 0px 6px #f0f8ff; /* Text shadow for glowing effect */
+        vertical-align: middle; /* Align it with text */
+        margin-left: auto; /* Align to the right */
+    }
+    
+    #export-button:hover {
+        background-color: #3c5060; /* Lighter background on hover */
+    }
