--- a/SysLvLUp/Alarm/css/status.css
+++ b/SysLvLUp/Alarm/css/status.css
@@ -58,6 +58,7 @@
         padding: 5px;
         border: 1px solid #e0e6f6;
         box-shadow: 0 0 10px #e0e6f6;
+        font-weight: 550;
         
     }
     .detail-input {
