--- a/SysLvLUp/Alarm/css/dental-study.css
+++ b/SysLvLUp/Alarm/css/dental-study.css
@@ -185,8 +185,9 @@ body {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1000; /* Sit on top */
-    left: 0;
-    top: 0;
+    left: 50%; /* Center horizontally */
+    top: 50%; /* Center vertically */
+    transform: translate(-50%, -50%); /* Adjust position to center */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
