--- a/SysLvLUp/Alarm/css/Initiation.css
+++ b/SysLvLUp/Alarm/css/Initiation.css
@@ -28,7 +28,7 @@ body {
 
 .initiation-container {
     text-align: center;
-    background-color: #fff;
+    background-color: #0A1B2E;
     padding: 30px;
     border: 0px solid #e0e6f6;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Stronger shadow for depth */
